@@ -18,6 +18,7 @@
  */
 
 extern int describe_table(Mapi mid, char *schema, char *tname, stream *toConsole, int foreign);
+extern int describe_sequence(Mapi mid, char *schema, char *sname, stream *toConsole);
 extern int dump_table_data(Mapi mid, char *schema, char *tname, stream *toConsole);
 extern int dump_table(Mapi mid, char *schema, char *tname, stream *toConsole, int describe, int foreign);
 extern int dump_functions(Mapi mid, stream *toConsole, const char *sname);
